# collector_bot

./: README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
collector_bot/: collector_bot.py  job.py  main.py
